[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "satel_integra_enh"
description = "Enhanced communication library for Satel Integra alarm system with extended protocol support including temperature monitoring."
readme = "README.md"
keywords = ["satel", "integra", "satel_integra", "alarm", "security", "temperature"]
authors = [
  { name = "Krzysztof Machelski", email = "krzysztof.machelski+pypi@gmail.com" },
  { name = "Tom Matheussen", email = "13683094+Tommatheussen@users.noreply.github.com" }
]
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dependencies = ["cryptography",]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "mypy==1.18.2",
  "pre-commit==3.4.0",
  "pydocstyle==6.3.0",
  "pylint==3.3.8",
  "pytest==8.4.2",
  "pytest-asyncio==1.2.0",
  "pytest-cov==7.0.0",
  "pytest-timeout==2.4.0",
]

[project.urls]
Repository="https://github.com/torchtarget/satel_integra_enh"
Changelog="https://github.com/torchtarget/satel_integra_enh/blob/master/CHANGELOG.md"

[tool.pytest.ini_options]
timeout = 10
addopts = "--cov --cov-report html"
